--- a/Mayor menor/assets/sass/index.scss
+++ b/Mayor menor/assets/sass/index.scss
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../images/fobo.png);
+    background-image: url(../images/font2.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 95% 100%;
