--- a/Mayormenor/assets/sass/index.css
+++ b/Mayormenor/assets/sass/index.css
@@ -51,7 +51,8 @@ body {
   border: aqua solid 2px;
   border-radius: 15px;
 }
-.dadosn7 h2 {
+
+.casf {
   width: 40px;
   height: 50px;
   display: flex;
