--- a/Mayormenor/assets/sass/index.scss
+++ b/Mayormenor/assets/sass/index.scss
@@ -55,21 +55,21 @@ body{
     justify-content:right;
     border: $coloraqua solid 2px;
     border-radius: 15px;
-    h2{
-        width: 40px;
-        height: 50px;
-        display: flex;
-        flex-wrap: wrap-reverse;
-        justify-content: center;
-        border: $colorblack solid 1px;
-        background-image: url(../images/casa.jpg);
-        background-size: 100% ;
-        background-position: center;
-        color: $colorwhite ;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-size: 35px;
-        -webkit-text-stroke: 1px $coloryellow;
-    }
+}
+.casf{
+    width: 40px;
+    height: 50px;
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: center;
+    border: $colorblack solid 1px;
+    background-image: url(../images/casa.jpg);
+    background-size: 100% ;
+    background-position: center;
+    color: $colorwhite ;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 35px;
+    -webkit-text-stroke: 1px $coloryellow;
 }
 .numerosMa{
     float: left;
